--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
   "parserOptions": {
     "ecmaVersion": "latest"
   },
+  "parser": "@typescript-eslint/parser",
   "env": {
     "browser": true,
     "node": true,
@@ -10,7 +11,7 @@
   },
   "globals": { "_": true },
   "plugins": ["import", "html"],
-  "extends": ["airbnb-base", "prettier"],
+  "extends": ["airbnb-base", "prettier", "react-app"],
   "rules": {
     // "off" or 0 - turn the rule off
     // "warn" or 1 - turn the rule on as a warning (doesn’t affect exit code)
