--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18.0.0-rc.3",
     "react-dom": "^18.0.0-rc.3",
     "recoil": "^0.7.7",
-    "styled-components": "^6.0.2"
+    "styled-components": "^6.0.2",
+    "styled-reset": "^4.5.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
