--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.0.0-rc.3",
     "react-dom": "^18.0.0-rc.3",
+    "react-icons": "^4.10.1",
     "recoil": "^0.7.7",
     "styled-components": "^6.0.2",
     "styled-reset": "^4.5.1"
