--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.0.0-rc.3",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
+    "react-table": "^7.8.0",
     "recoil": "^0.7.7",
     "styled-components": "^6.0.2",
     "styled-reset": "^4.5.1"
