--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@uiw/react-md-editor": "^3.23.4",
     "axios": "^1.4.0",
     "firebase": "^10.0.0",
     "react": "^18.0.0-rc.3",
