--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@uiw/react-md-editor": "^3.23.4",
     "axios": "^1.4.0",
     "firebase": "^10.0.0",
+    "jodit-react": "^1.3.39",
     "react": "^18.0.0-rc.3",
     "react-dom": "^18.0.0-rc.3",
     "react-icons": "^4.10.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.14.1",
     "react-table": "^7.8.0",
     "recoil": "^0.7.7",
