--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^40.0.0",
+    "@ckeditor/ckeditor5-react": "^6.1.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@uiw/react-md-editor": "^3.23.4",
     "axios": "^1.4.0",
     "firebase": "^10.3.1",
+    "jodit": "^4.0.0-beta.61",
     "jodit-react": "^1.3.39",
     "react": "^18.0.0-rc.3",
     "react-dom": "^18.0.0-rc.3",
