--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.10.7",
     "@ckeditor/ckeditor5-build-classic": "^40.0.0",
     "@ckeditor/ckeditor5-react": "^6.1.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@uiw/react-md-editor": "^3.23.4",
     "axios": "^1.4.0",
     "firebase": "^10.3.1",
+    "framer-motion": "^12.9.7",
     "jodit": "^4.0.0-beta.61",
     "jodit-react": "^1.3.39",
     "react": "^18.0.0-rc.3",
@@ -23,14 +27,17 @@
     "react-icons": "^4.10.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.14.1",
+    "react-slick": "^0.30.3",
     "react-table": "^7.8.0",
     "recoil": "^0.7.7",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.2",
     "styled-reset": "^4.5.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.37",
+    "@types/react": "^18.3.21",
     "@types/react-dom": "^18.0.11",
+    "@types/react-slick": "^0.23.13",
     "@types/react-table": "^7.7.14",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
@@ -44,7 +51,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "prettier": "2.8.8",
-    "typescript": "^5.1.6",
+    "typescript": "^5.8.3",
     "vite": "^4.3.9"
   },
   "main": "index.js",
