--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ckeditor/ckeditor5-react": "^6.1.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@uiw/react-md-editor": "^3.23.4",
     "axios": "^1.4.0",
