--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "styled-reset": "^4.5.1"
   },
   "devDependencies": {
+    "@types/node": "^22.15.14",
     "@types/react": "^18.3.21",
     "@types/react-dom": "^18.0.11",
     "@types/react-slick": "^0.23.13",
